--- a/src/GUI/fHome.form
+++ b/src/GUI/fHome.form
@@ -55,7 +55,7 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabelThongBao" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelThongBao2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jComboBoxNhanVien" min="-2" pref="163" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -81,7 +81,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabelThongBao2" min="-2" max="-2" attributes="0"/>
                               <Component id="jComboBoxNhanVien" alignment="1" min="-2" pref="34" max="-2" attributes="0"/>
                               <Component id="jLabelThongBao" alignment="1" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -659,7 +659,7 @@
             </Container>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="jLabel9">
+        <Component class="javax.swing.JLabel" name="jLabelThongBao2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/icon/icons8-notification-30.png"/>
@@ -668,6 +668,9 @@
               <Color id="Hand Cursor"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelThongBao2MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelThongBao">
           <Properties>
